<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Organizator Android</string>
	<string name="hello_world">Hello world!</string>
	<string name="organizator_chat">Chat Organizator</string>
	<string name="menu_chat_search">Chat Search</string>
	<string name="menu_memo_search">Memo Search</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_exit">Exit</string>
	<string name="select_destination">Select Destination</string>
	<string name="notification_title">New Organizator Message</string>
	<string name="ticker">New Organizator Message</string>
	<string name="type_message">Type Message</string>
	<string name="type_search_criteria">Search sender:aa date:yyyymmdd</string>
	<string name="type_memo_search_criteria">Search title:aa</string>
	<string name="type_memo">Edit Memo</string>
	<string name="send">Send</string>
	<string name="search">Search</string>
	<string name="login">Login</string>
	<string name="prompt_password">Password</string>
	<string name="prompt_username">Username</string>
	<string name="action_login">Login</string>
	<string name="login_progress">Login progress</string>
	<string name="error_incorrect_username_or_password">Incorrect Username or Password</string>
	<string name="toggleNumericPassword">Numeric Password</string>
	<string name="SelectDestinations">Select Destination(s)</string>
	<string name="Select">Select</string>
	<string name="Cancel">Cancel</string>
	<string name="Clear">Clear</string>

	<string name="exit_application">Exit Organizator</string>
	<string name="exit_application_are_you_sure">Are you sure you want to exit?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>

	<string name="chat_search_menu_title_today">Today</string>
	<string name="chat_search_menu_title_yesterday">Yesterday</string>
	<string name="chat_search_menu_title_clear">Clear</string>

	<string name="chat_menu_patraulea">Patraulea, dormi?</string>

	<!-- Drawer -->
	<string-array name="activities_array">
		<item>Chat</item>
		<item>Chat Search</item>
		<item>Memo Search</item>
		<item>Settings</item>
		<item>Old Chat</item>
		<item>Exit</item>
    </string-array>
	<string name="drawer_open">Open navigation drawer</string>
	<string name="drawer_close">Close navigation drawer</string>
	
</resources>